--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -18,16 +18,11 @@ jobs:
           - 3306:3306
         options: --tmpfs /tmp:rw --tmpfs /var/lib/mysql:rw --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
       es:
-        image: opensearchproject/opensearch:2.5.0
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.8.0
         ports:
           - 9200:9200
-        env:
-          discovery.type: single-node
-          plugins.security.disabled: true
-          OPENSEARCH_JAVA_OPTS: "-Xms512m -Xmx512m"
-          DISABLE_INSTALL_DEMO_CONFIG: true
-          compatibility.override_main_response_version: true
-        options: --health-cmd="curl -f localhost:9200/_cluster/health?wait_for_status=yellow&timeout=60s" --health-interval=10s --health-timeout=5s --health-retries=5
+          - 9300:9300
+        options: -e="discovery.type=single-node" --health-cmd="curl http://localhost:9200/_cluster/health" --health-interval=10s --health-timeout=5s --health-retries=10
     steps:
       - uses: actions/checkout@v4
       - name: M2 Integration Tests with Magento 2.4.8-p3 (PHP 8.4)
