--- a/.github/workflows/coding-standard.yml
+++ b/.github/workflows/coding-standard.yml
@@ -18,8 +18,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: extdn/github-actions-m2/magento-coding-standard@master
         with:
-          phpcs_severity: 10
-          phpcs_report: full
+          phpcs_standard: ./phpcs.xml
 
   phpmd:
     name: M2 Mess Detection
