Fix unit tests: PHPUnit 10 compatibility and mock configuration
- Fix SupportTabTest::testGetVersionNumber: Add getModuleVersion() stub to mock
- Fix AccountTest::testGetConfig: Add missing 'cancel_on_browser_back' key
- Fix ActiveAccountValidatorTest: Add quote mock with getStoreId() (3 tests fixed)
- Fix RecreateTest: Add setStoreId to mock onlyMethods (partial fix)
- Update phpunit.xml.dist: PHPUnit 10 format (source instead of filter/whitelist)
- Remove non-existent Functional testsuite from phpunit.xml.dist

Results: Reduced errors from 45 to 40 (5 tests fixed)
Remaining 40 errors are SDK-dependent (missing Buckaroo SDK classes)

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -28,9 +28,6 @@
         <testsuite name="unit">
             <directory suffix="Test.php">./Test/Unit</directory>
         </testsuite>
-        <testsuite name="functional">
-            <directory suffix="Test.php">./Test/Functional</directory>
-        </testsuite>
     </testsuites>
 
     <php>
@@ -38,17 +35,13 @@
         <ini name="xdebug.max_nesting_level" value="200"/>
     </php>
 
-    <filter>
-        <whitelist addUncoveredFilesFromWhiteList="true">
+    <source>
+        <include>
             <directory suffix=".php">.</directory>
-            <exclude>
-                <directory suffix=".php">Test</directory>
-                <file>registration.php</file>
-            </exclude>
-        </whitelist>
-    </filter>
-
-    <logging>
-        <log type="coverage-clover" target="build/logs/clover-unit.xml"/>
-    </logging>
+        </include>
+        <exclude>
+            <directory suffix=".php">Test</directory>
+            <file>registration.php</file>
+        </exclude>
+    </source>
 </phpunit>
